# Hospital-System-Database

./: CMakeLists.txt  README.md  main.cpp
page/: Administrative_page.cpp  Administrative_page.h  General_page.cpp  General_page.h  Login.cpp  Login.h  Mysql.cpp  Mysql.h  Purchaser_page.cpp  Purchaser_page.h
